# inflatelib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  vcpkg.json
.github/workflows/: ci.yml
onefuzz/: fuzz.yml
scripts/: build-all.cmd  build-all.sh  check-wsl.sh  format.cmd  fuzz-all.cmd  fuzz-all.sh  host-arch.sh  init-all.cmd  init-all.sh  init.cmd  init.sh  run-tests.cmd  run-tests.sh
src/include/: inflatelib.h  inflatelib.hpp
src/lib/: CMakeLists.txt  bitstream.c  bitstream.h  huffman_tree.c  huffman_tree.h  inflate.c  inflatelib.rc  internal.h  window.c  window.h
test/: CMakeLists.txt
test/cpp/: BitstreamTests.cpp  CMakeLists.txt  HuffmanTreeTests.cpp  InflateTests.cpp  WindowTests.cpp
test/data/: CMakeLists.txt  dynamic.empty.in  dynamic.error.code-lens-oob-repeat.begin.in  dynamic.error.code-lens-oob-repeat.end-long.in  dynamic.error.code-lens-oob-repeat.end-prev.in  dynamic.error.code-lens-oob-repeat.end-short.in  dynamic.error.distance-oob.long.deflate.in  dynamic.error.distance-oob.long.deflate64.in  dynamic.error.distance-oob.long.in  dynamic.error.distance-oob.short.in  dynamic.error.failed-lookup.code-lens.in  dynamic.error.failed-lookup.distances.long.in  dynamic.error.failed-lookup.distances.short.in  dynamic.error.failed-lookup.literals.long.in  dynamic.error.failed-lookup.literals.short.in  dynamic.error.invalid-distance.30.deflate.in  dynamic.error.invalid-distance.31.deflate.in  dynamic.error.invalid-symbol.286.in  dynamic.error.invalid-symbol.287.in  dynamic.error.tree-size.code-lens.short.in  dynamic.error.tree-size.code-lens.tall.in  dynamic.error.tree-size.distances.short.in  dynamic.error.tree-size.distances.tall.in  dynamic.error.tree-size.literals.short.in  dynamic.error.tree-size.literals.tall.in  dynamic.length-distance-stress.deflate.in  dynamic.length-distance-stress.deflate64.in  dynamic.length-distance-stress.in  dynamic.multiple.deflate.in  dynamic.multiple.deflate64.in  dynamic.multiple.deflate64.out  dynamic.multiple.in  dynamic.overlap.deflate.in  dynamic.overlap.deflate64.in  dynamic.overlap.in  dynamic.single.deflate.in  dynamic.single.deflate64.in  dynamic.single.deflate64.out  dynamic.single.in  error.invalid-block-type.in  (+65 more)
test/fuzz/: CMakeLists.txt  OneFuzzConfig.json  fuzzing-sources.txt  onefuzz.yml
test/fuzz/inflate/: CMakeLists.txt  main.cpp
test/fuzz/inflate/corpus/: CMakeLists.txt
test/fuzz/inflate64/: CMakeLists.txt  main.cpp
test/fuzz/inflate64/corpus/: CMakeLists.txt
test/perf/: CMakeLists.txt  algorithms.c  algorithms.h  file_io.c  file_io.h  histogram.c  histogram.h  main.c  pch.h
test/tools/: CMakeLists.txt
test/tools/bin-write/: CMakeLists.txt  grammar.md  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test.in
test/tools/block-encode/: CMakeLists.txt  main.cpp  max_heap.h
test/tools/byte-view/: CMakeLists.txt  main.cpp
test/tools/huffman-encode/: CMakeLists.txt  main.cpp
test/tools/zip-extract/: CMakeLists.txt  main.cpp
vcpkg/toolchain/: windows-llvm.cmake
vcpkg/triplets/asan/: arm64-windows-llvm.cmake  arm64-windows.cmake  x64-windows-llvm.cmake  x64-windows.cmake  x86-windows-llvm.cmake  x86-windows.cmake
